makin' stuff prettier

--- a/index.html
+++ b/index.html
@@ -41,43 +41,104 @@
     <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit row">
-        <h1>Betterplace Hack Day</h1>
-        <div class="span7">
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-          <h3>Location: BlahBlah office</h3>
-          <h3>Date: 01/02/12</h3>
+      <div id="description" class="hero-unit row">
+        <h1>Online Fundraising Hackathon</h1>
+        <h2>Berlin: 19th-21st July 2013</h2>
+
+      </div>
+
+      <div class="row">
+        <div class="span11">
+          <h2>Why and What is it?</h2>
+
+          <p>
+            Online dontation and Fundraisning  are  becoming increasingly important in for the NGOs. There hasn't past much time, since the first online donation App or platform was build and their has happen a lot. But how will the future look like? At the Digital Donation - Hack Days, we want to bring social entrepreneurs, creative people, tech people, business people and experts together to develop and discover the future of digital dontations with you. Together we want to create innovativ new tool, features or concepts.
+          </p>
+          <p>
+            Dicuss the problems, pitch your ideas, form a team, work, get feedback from experts, mentors or other teams and finally present what you have achieved in 3 days. Create Apps, Websites or new concepts! Get to know like minded people, do good, exchange knowledge, learn, build and network in a collaborative atmosphere.
+          </p>
         </div>
-        <div class="span3">
-          <p><img src="http://placekitten.com/300/300" /></p>
-          <p><a href="http://www.eventbrite.com" class="btn btn-primary btn-really-large">Book Ticket</a></p>
+        <div class="span3" id="collaborators">
+          <h4>In collaboration with:</h4>
+          <p><img src="images/betterplace.jpg" /></p>
+          <p><img src="images/stanford.jpg" /></p>
         </div>
       </div>
 
-      <!-- Example row of columns -->
+      <hr />
+
       <div class="row">
-        <div class="span8">
-          <h2>Heading</h2>
+        <h3>Book your ticket:</h3>
+        <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=7227077383&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+      </div>
+
+
+
+      <hr />
+
+      <h2>Finding the venue:</h2>
+      <div class="row">
+        <div class="span7">
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><img src="http://maps.google.com/maps/api/staticmap?center=52.500170,13.429949&zoom=16&markers=52.500170,13.429949&size=600x300&sensor=false" /> </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
-        <div class="span4" id="collaborators">
-          <h3>In Collaboration with</h3>
-          <p><a href="http://labs.betterplace.org">
-            <img src="http://placekitten.com/200/100" />
-          </a></p>
-          <br/>
-          <p><a href="http://labs.betterplace.org">
-            <img src="http://placekitten.com/200/100" />
-          </a></p>
-        </div>
+        <p class="span7">
+          <img src="http://maps.google.com/maps/api/staticmap?center=52.500170,13.429949&zoom=16&markers=52.500170,13.429949&size=600x300&sensor=false" />
+        </p>
       </div>
 
       <hr>
 
+      <h2> Schedule:</h2>
+      <div class="row" >
+        <div class="span1"></div>
+        <div class="span4">
+          <h3>Friday 19th July<h3>
+          <div class="time">
+            7pm - 12pm
+          </div>
+          <div class="details">
+            Registration
+          </div>
+        </div>
+        <div class="span4">
+          <h3>Friday 19th July<h3>
+          <div class="time">
+            7pm - 12pm
+          </div>
+          <div class="details">
+            Registration
+          </div>
+        </div>
+
+        <div class="span4">
+          <h3>Friday 19th July<h3>
+          <div class="time">
+            7pm - 12pm
+          </div>
+          <div class="details">
+            Registration
+          </div>
+        </div>
+
+
+      </div>
+
+      <hr />
+
+      <h3>Sponsors</h3>
+      <div class="row" id="sponsors">
+
+        <div class="span1"></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+      </div>
+
+
+      <hr />
       <footer>
         <p>&copy; Betterplace Labs and Berlin Peace Innovation Lab </p>
       </footer>
