--- a/index.html
+++ b/index.html
@@ -31,25 +31,31 @@
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#location">Location</a></li>
+              <li><a href="#sponsors">Sponsors</a></li>
+              <li><a href="#schedule">Schedule</a></li>
+              <li><a href="#rules">Rules</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-
-    <div class="container">
+    <div class="container content">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div id="description" class="hero-unit row">
         <h1>Online Fundraising Hackathon</h1>
         <h2>Berlin: 19th-21st July 2013</h2>
-
+        <p class="span8"> 3 days to build digital donation and fundraising apps<p>
+        <div class="span4">
+          <a href="#tickets" class="btn btn-primary btn-really-large" style="margin-left:1em">Get Your Ticket</a>
+        </div>
       </div>
 
       <div class="row">
-        <div class="span11">
-          <h2>Why and What is it?</h2>
+
+        <div class="span6">
+          <h2>Want to make a REAL difference?</h2>
 
           <p>
             Online dontation and Fundraisning  are  becoming increasingly important in for the NGOs. There hasn't past much time, since the first online donation App or platform was build and their has happen a lot. But how will the future look like? At the Digital Donation - Hack Days, we want to bring social entrepreneurs, creative people, tech people, business people and experts together to develop and discover the future of digital dontations with you. Together we want to create innovativ new tool, features or concepts.
@@ -58,16 +64,29 @@
             Dicuss the problems, pitch your ideas, form a team, work, get feedback from experts, mentors or other teams and finally present what you have achieved in 3 days. Create Apps, Websites or new concepts! Get to know like minded people, do good, exchange knowledge, learn, build and network in a collaborative atmosphere.
           </p>
         </div>
-        <div class="span3" id="collaborators">
-          <h4>In collaboration with:</h4>
-          <p><img src="images/betterplace.jpg" /></p>
-          <p><img src="images/stanford.jpg" /></p>
+        <div class="span1">&nbsp;</div>
+        <div class="span6">
+          <h3>The CHALLENGE of online donations:</h3>
+
+
+          <h4>We have collected a list of questions to tickle your creativity</h4>
+          <ul>
+            <li>How can we make donation sexy?</li>
+            <li>How can we make donations interactive?</li>
+            <li>How can donating add value to the person giving?</li>
+            <li>How can donating be integrated into our daily routines?</li>
+            <li>How can we attract the 57% of the Germans, who have never donated?</li>
+            <li>How can we improve products and services through donations?</li>
+            <li>How can we catapult donations to the next level?</li>
+          </ul>
         </div>
       </div>
 
+
+
       <hr />
 
-      <div class="row">
+      <div class="row" id="tickets">
         <h3>Book your ticket:</h3>
         <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=7227077383&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
       </div>
@@ -76,8 +95,9 @@
 
       <hr />
 
-      <h2>Finding the venue:</h2>
-      <div class="row">
+
+      <div class="row" id="location">
+        <h2>Finding the venue:</h2>
         <div class="span7">
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
@@ -90,51 +110,121 @@
 
       <hr>
 
-      <h2> Schedule:</h2>
-      <div class="row" >
-        <div class="span1"></div>
+
+      <div class="row" id="schedule" >
+        <h2> Schedule:</h2>
+        <div class="span1">&nbsp;</div>
         <div class="span4">
-          <h3>Friday 19th July<h3>
+          <h3>Friday 19th July</h3>
           <div class="time">
             7pm - 12pm
           </div>
-          <div class="details">
-            Registration
-          </div>
+          <ul class="details">
+            <li>18.00 Registration</li>
+            <li>19.15 Welcome speech</li>
+            <li>19.45 Open round - The challenges of digital donations and fundraising</li>
+            <li>20.15 Teambuilding + Dinner</li>
+            <li>21.15 Brainstorming & Lean Startup Canvas</li>
+            <li>00.00 “End of play”</li>
+          </ul>
         </div>
         <div class="span4">
-          <h3>Friday 19th July<h3>
+          <h3>Saturday 20 July</h3>
           <div class="time">
-            7pm - 12pm
+            9am - open all night
           </div>
-          <div class="details">
-            Registration
-          </div>
+          <ul class="details">
+            <li>09.00 Breakfast</li>
+            <li>10.00 Introduction to the Betterplace API</li>
+            <li>11.00 Concepting or start hacking</li>
+            <li>13.00 Lunch</li>
+            <li>14.00 Work Work Work!</li>
+            <li>16.00 Mentor feedback session</li>
+            <li>19.30 Cross-over presentation</li>
+            <li>20.00 Dinner</li>
+            <li>21.00 Work ´til you drop</li>
+          </ul>
         </div>
 
         <div class="span4">
-          <h3>Friday 19th July<h3>
+          <h3>Sunday 21st July</h3>
           <div class="time">
-            7pm - 12pm
+            10am - 4pm
           </div>
-          <div class="details">
-            Registration
-          </div>
+          <ul class="details">
+            <li>09.00 Breakfast</li>
+            <li>10.00 Complete development</li>
+            <li>11.00 Prepare the final presentations</li>
+            <li>12.00 Lunch</li>
+            <li>13.00 Exhibition and Feedback</li>
+            <li>14.30 Celebration!</li>
+          </ul>
         </div>
-
-
       </div>
 
       <hr />
 
-      <h3>Sponsors</h3>
-      <div class="row" id="sponsors">
 
+
+      <div class="row">
+        <h3>Organised by:</h3>
+        <div class="span5">
+          <h4>Betterplace</h4>
+          betterplace.org is Germany's largest online marketplace for social projects and is used for fundraising by over 5000 civil society organisations. The betterplace lab is a think and do tank, researching digital communications for the social sector.
+        </div>
+        <div class="span2">
+          <img src="images/betterplace.jpg" />
+        </div>
+
+        <div class="span5">
+          <h4>Berlin Peace innovation Lab</h4>
+
+          Berlin Peace Innovation Lab   is part of a global network started at Stanford's Persuasive Technology Lab. The peace innovation network focuses on how technology is facilitating emerging and measurable social changes toward global peace. The Berlin Peace Innovation Lab provides design frameworks, principles and methodologies for interventions that will increase positive engagement at scale.
+        </div>
+        <div class="span2">
+          <img src="images/stanford.jpg" />
+        </div>
+      </div>
+
+      <hr />
+
+
+      <div class="row" id="sponsors">
+        <h3>Sponsors</h3>
         <div class="span1"></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+      </div>
+
+      <hr />
+
+
+      <div class="row" id="rules">
+        <h3>Rules</h3>
+        <div class="span14">
+          <h4>No coding in front</h4>
+          <p>
+            We all start coding at the same time. Prior to the hackathon you may work on idea validation,
+            digital mockups or your mockups. But please, no coding beforehand.
+          </p>
+          <h4>Ownership </h4>
+          <p>
+            The teams will have full ownership of everything they build during the hackathon.
+          </p>
+          <h4>What to build </h4>
+          <p>
+            Create a prototype, build an App, design a website or present a cool fundraising concept,
+            which can help non-profits improve their social impact.</p>
+
+          <h4>Have fun</h4>
+          <p>
+            Remember that you're at the Hackathon to have fun. It's a place to experiment, meet interesting people,
+            learn something new and build something from scratch. Don't stress yourself out too much if you don't
+            accomplish what you set out to do. Make sure to have a good time and put your best food forward.
+          </p>
+        </div>
       </div>
 
 
