--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
               <li><a href="#about">About</a></li>
               <li><a href="#location">Location</a></li>
               <li><a href="#sponsors">Sponsors</a></li>
+              <li><a href="#mentors">Mentors</a></li>
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#rules">Rules</a></li>
+
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -44,7 +46,7 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div id="description" class="hero-unit row">
-        <h1>Online Fundraising Hackathon</h1>
+        <h1>Hack The World @Betterplace</h1>
         <h2>Berlin: 19th-21st July 2013</h2>
         <p class="span8"> 3 days to build digital donation and fundraising apps<p>
         <div class="span4">
@@ -56,15 +58,17 @@
 
         <div class="span6">
           <h2>Want to make a REAL difference?</h2>
+          <p>
+            Crowdfunding, digital donations and other innovative ways of fundraising have become increasingly important to the non-profit sector. It feels like only yesterday that we saw  the light of the first donation Apps and crowdfunding platforms, but the constant iterations has   leaped the development one big step ahead. Imagine what donations will look   like in the future! But don´t just imagine it - come build it!
+          </p>
+          <p>
+             Hack the World @ betterplace will bring social entrepreneurs, creatives, developers and business people together to discover and develop the future of digital donations.   Together, we want to create innovative new tools, fun features or mind-blowing concepts.
+          <p>
+            Discuss the challenges, pitch your ideas, form a team, work-work-work, get feedback from experts and mentors. Get to know likeminded people, do good, exchange knowledge, learn, build and network in a fun and friendly atmosphere. Then, finally, present and exhibit what you have achieved in just three days. Whether it be a new donation App, a fundraising website or an entirely new charity concept, we cannot wait to see it!
+          </p>
 
-          <p>
-            Online dontation and Fundraisning  are  becoming increasingly important in for the NGOs. There hasn't past much time, since the first online donation App or platform was build and their has happen a lot. But how will the future look like? At the Digital Donation - Hack Days, we want to bring social entrepreneurs, creative people, tech people, business people and experts together to develop and discover the future of digital dontations with you. Together we want to create innovativ new tool, features or concepts.
-          </p>
-          <p>
-            Dicuss the problems, pitch your ideas, form a team, work, get feedback from experts, mentors or other teams and finally present what you have achieved in 3 days. Create Apps, Websites or new concepts! Get to know like minded people, do good, exchange knowledge, learn, build and network in a collaborative atmosphere.
-          </p>
         </div>
-        <div class="span1">&nbsp;</div>
+        <div class="span2">&nbsp;</div>
         <div class="span6">
           <h3>The CHALLENGE of online donations:</h3>
 
@@ -190,7 +194,7 @@
 
 
       <div class="row" id="sponsors">
-        <h3>Sponsors</h3>
+        <h3>Sponsors:</h3>
         <div class="span1"></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
@@ -200,6 +204,16 @@
 
       <hr />
 
+      <div class="row" id="mentors">
+        <h3>Mentors:</h3>
+        <div class="span1"></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+      </div>
+
+      <hr />
 
       <div class="row" id="rules">
         <h3>Rules</h3>
