making even more pretty

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
               <li><a href="#mentors">Mentors</a></li>
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#rules">Rules</a></li>
-
             </ul>
+            <p class="navbar-text pull-right">
+              <a href="#tickets">Get Your Ticket</a>
+            </p>
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -47,39 +49,36 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div id="description" class="hero-unit row">
         <h1>Hack The World @Betterplace</h1>
+        <p> 3 days to build digital donation and fundraising apps<p>
         <h2>Berlin: 19th-21st July 2013</h2>
-        <p class="span8"> 3 days to build digital donation and fundraising apps<p>
-        <div class="span4">
-          <a href="#tickets" class="btn btn-primary btn-really-large" style="margin-left:1em">Get Your Ticket</a>
-        </div>
       </div>
 
-      <div class="row">
 
-        <div class="span6">
-          <h2>Want to make a REAL difference?</h2>
+      <div class="row">
+        <h2>want to make a REAL difference?</h2>
+        <div class="span14">
           <p>
-            Crowdfunding, digital donations and other innovative ways of fundraising have become increasingly important to the non-profit sector. It feels like only yesterday that we saw  the light of the first donation Apps and crowdfunding platforms, but the constant iterations has   leaped the development one big step ahead. Imagine what donations will look   like in the future! But don´t just imagine it - come build it!
+            Crowdfunding, digital donations and other innovative ways of fundraising have become increasingly important to the non-profit sector. It feels like only yesterday that we saw the light of the first donation Apps and crowdfunding platforms, but the constant iterations has   leaped the development one big step ahead. Imagine what donations will look like in the future! But don´t just imagine it - come build it!
           </p>
           <p>
-             Hack the World @ betterplace will bring social entrepreneurs, creatives, developers and business people together to discover and develop the future of digital donations.   Together, we want to create innovative new tools, fun features or mind-blowing concepts.
+             Hack the World @ betterplace will bring social entrepreneurs, creatives, developers and business people together to discover and develop the future of digital donations. Together, we want to create innovative new tools, fun features or mind-blowing concepts.
           <p>
             Discuss the challenges, pitch your ideas, form a team, work-work-work, get feedback from experts and mentors. Get to know likeminded people, do good, exchange knowledge, learn, build and network in a fun and friendly atmosphere. Then, finally, present and exhibit what you have achieved in just three days. Whether it be a new donation App, a fundraising website or an entirely new charity concept, we cannot wait to see it!
           </p>
-
-        </div>
-        <div class="span2">&nbsp;</div>
-        <div class="span6">
-          <h3>The CHALLENGE of online donations:</h3>
+        <div>
+      </div>
 
 
+      <div class="row">
+        <h3>the CHALLENGE of online donations:</h3>
+        <div class="span14">
           <h4>We have collected a list of questions to tickle your creativity</h4>
           <ul>
-            <li>How can we make donation sexy?</li>
+            <li>How can we make donations sexy?</li>
             <li>How can we make donations interactive?</li>
             <li>How can donating add value to the person giving?</li>
             <li>How can donating be integrated into our daily routines?</li>
-            <li>How can we attract the 57% of the Germans, who have never donated?</li>
+            <li>How can we attract the 60% of the Germans, who have never donated?</li>
             <li>How can we improve products and services through donations?</li>
             <li>How can we catapult donations to the next level?</li>
           </ul>
@@ -91,7 +90,7 @@
       <hr />
 
       <div class="row" id="tickets">
-        <h3>Book your ticket:</h3>
+        <h3>book your ticket:</h3>
         <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=7227077383&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
       </div>
 
@@ -101,7 +100,7 @@
 
 
       <div class="row" id="location">
-        <h2>Finding the venue:</h2>
+        <h2>finding the venue:</h2>
         <div class="span7">
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
@@ -116,7 +115,7 @@
 
 
       <div class="row" id="schedule" >
-        <h2> Schedule:</h2>
+        <h2> schedule:</h2>
         <div class="span1">&nbsp;</div>
         <div class="span4">
           <h3>Friday 19th July</h3>
@@ -133,7 +132,7 @@
           </ul>
         </div>
         <div class="span4">
-          <h3>Saturday 20 July</h3>
+          <h3>Saturday 20th July</h3>
           <div class="time">
             9am - open all night
           </div>
@@ -171,21 +170,18 @@
 
 
       <div class="row">
-        <h3>Organised by:</h3>
+        <h3>organised by:</h3>
         <div class="span6">
           <h4>Betterplace</h4>
-          betterplace.org is Germany's largest online marketplace for social projects and is used for fundraising by over 5000 civil society organisations. The betterplace lab is a think and do tank, researching digital communications for the social sector.
+          betterplace.org is Germany's largest online marketplace for social projects and is used for fundraising by over 5000 civil society organisations. The betterplace lab is a think and do tank, researching and implementing digital communications for the social sector.
         </div>
         <div class="span2">
-          <img src="images/betterplace.jpg" />
-
-          <img src="images/stanford.jpg" />
         </div>
 
         <div class="span6">
           <h4>Berlin Peace innovation Lab</h4>
+          Berlin Peace Innovation Lab is part of a global network started at Stanford's Persuasive Technology Lab. The peace innovation network focuses on how technology is facilitating emerging and measurable social changes toward global peace. The Berlin Peace Innovation Lab provides design frameworks, principles and methodologies for interventions that will increase positive engagement at scale.
 
-          Berlin Peace Innovation Lab   is part of a global network started at Stanford's Persuasive Technology Lab. The peace innovation network focuses on how technology is facilitating emerging and measurable social changes toward global peace. The Berlin Peace Innovation Lab provides design frameworks, principles and methodologies for interventions that will increase positive engagement at scale.
         </div>
       </div>
 
@@ -193,18 +189,17 @@
 
 
       <div class="row" id="sponsors">
-        <h3>Sponsors:</h3>
+        <h3>sponsors:</h3>
         <div class="span1"></div>
-        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
-        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
-        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
-        <div class="span3"><img src="http://placekitten.com/200/100" /></div>
+        <div class="span4"><img src="images/betterplace.jpg" width="300" /></div>
+        <div class="span4"><img src="images/berlin_pil.png" width="300" /></div>
+        <div class="span4"><img src="http://placekitten.com/300/80" /></div>
       </div>
 
       <hr />
 
       <div class="row" id="mentors">
-        <h3>Mentors:</h3>
+        <h3>mentors:</h3>
         <div class="span1"></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
@@ -215,9 +210,9 @@
       <hr />
 
       <div class="row" id="rules">
-        <h3>Rules</h3>
+        <h3>rules:</h3>
         <div class="span14">
-          <h4>No coding in front</h4>
+          <h4>No coding up front</h4>
           <p>
             We all start coding at the same time. Prior to the hackathon you may work on idea validation,
             digital mockups or your mockups. But please, no coding beforehand.
