more shininess, plus CNAME

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
           <a class="brand" href="#">Better Hack Day</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li class="active"><a href="#description">Home</a></li>
               <li><a href="#location">Location</a></li>
               <li><a href="#sponsors">Sponsors</a></li>
-              <li><a href="#mentors">Mentors</a></li>
+              <!--<li><a href="#mentors">Mentors</a></li>-->
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#rules">Rules</a></li>
             </ul>
@@ -85,8 +84,6 @@
         </div>
       </div>
 
-
-
       <hr />
 
       <div class="row" id="tickets">
@@ -94,20 +91,25 @@
         <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=7227077383&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
       </div>
 
-
-
       <hr />
-
 
       <div class="row" id="location">
         <h2>finding the venue:</h2>
         <div class="span7">
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <div class="address">
+            <h3>Betterplace.org office</h3>
+            <p> Aufgang/entrance C, 5th floor </p>
+            <p> Schlesische Straße 26 </p>
+            <p> D-10997 Berlin </p>
+          </div>
+          <p>We're short walk from Schlesisches Tor, Treptower Park U/S-Bahn stations, just follow the "Hackathon" signs when you get here.</p>
+          <p>Note that while you're free to leave at any time, the doors are only open for entry between 8am and midnight.</p>
+          </p>
         </div>
         <p class="span7">
-          <img src="http://maps.google.com/maps/api/staticmap?center=52.500170,13.429949&zoom=16&markers=52.500170,13.429949&size=600x300&sensor=false" />
+          <a href="http://goo.gl/maps/pCj7O">
+            <img src="http://maps.google.com/maps/api/staticmap?center=52.497414,13.447995&zoom=15&markers=52.498067,13.447909&size=600x300&sensor=false" />
+          </a>
         </p>
       </div>
 
@@ -193,11 +195,11 @@
         <div class="span1"></div>
         <div class="span4"><img src="images/betterplace.jpg" width="300" /></div>
         <div class="span4"><img src="images/berlin_pil.png" width="300" /></div>
-        <div class="span4"><img src="http://placekitten.com/300/80" /></div>
+        <!-- <div class="span4"><img src="http://placekitten.com/300/80" /></div> -->
       </div>
 
+      <!--
       <hr />
-
       <div class="row" id="mentors">
         <h3>mentors:</h3>
         <div class="span1"></div>
@@ -206,6 +208,7 @@
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
       </div>
+      -->
 
       <hr />
 
