--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
       <div class="row">
-        <h2>want to make a REAL difference?</h2>
+        <h2>Want to make a real difference?</h2>
         <div class="span14">
           <p>
             Crowdfunding, digital donations and other innovative ways of fundraising have become increasingly important to the non-profit sector. It feels like only yesterday that we saw the light of the first donation Apps and crowdfunding platforms, but the constant iterations has   leaped the development one big step ahead. Imagine what donations will look like in the future! But don´t just imagine it - come build it!
@@ -69,7 +69,7 @@
 
 
       <div class="row">
-        <h3>the CHALLENGE of online donations:</h3>
+        <h3>The chanllenge of online donations:</h3>
         <div class="span14">
           <h4>We have collected a list of questions to tickle your creativity</h4>
           <ul>
@@ -87,14 +87,14 @@
       <hr />
 
       <div class="row" id="tickets">
-        <h3>book your ticket:</h3>
+        <h3>Book your ticket:</h3>
         <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=7227077383&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
       </div>
 
       <hr />
 
       <div class="row" id="location">
-        <h2>finding the venue:</h2>
+        <h2>Finding the venue:</h2>
         <div class="span7">
           <div class="address">
             <h3>Betterplace.org office</h3>
@@ -117,7 +117,7 @@
 
 
       <div class="row" id="schedule" >
-        <h2> schedule:</h2>
+        <h2>schedule:</h2>
         <div class="span1">&nbsp;</div>
         <div class="span4">
           <h3>Friday 19th July</h3>
@@ -172,7 +172,7 @@
 
 
       <div class="row">
-        <h3>organised by:</h3>
+        <h3>Organised by:</h3>
         <div class="span6">
           <h4>Betterplace</h4>
           betterplace.org is Germany's largest online marketplace for social projects and is used for fundraising by over 5000 civil society organisations. The betterplace lab is a think and do tank, researching and implementing digital communications for the social sector.
@@ -191,7 +191,7 @@
 
 
       <div class="row" id="sponsors">
-        <h3>sponsors:</h3>
+        <h3>Sponsors:</h3>
         <div class="span1"></div>
         <div class="span4"><img src="images/betterplace.jpg" width="300" /></div>
         <div class="span4"><img src="images/berlin_pil.png" width="300" /></div>
@@ -201,7 +201,7 @@
       <!--
       <hr />
       <div class="row" id="mentors">
-        <h3>mentors:</h3>
+        <h3>Mentors:</h3>
         <div class="span1"></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
         <div class="span3"><img src="http://placekitten.com/200/100" /></div>
@@ -213,7 +213,7 @@
       <hr />
 
       <div class="row" id="rules">
-        <h3>rules:</h3>
+        <h3>Rules:</h3>
         <div class="span14">
           <h4>No coding up front</h4>
           <p>
