--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
       <div class="row">
-        <h3>The chanllenge of online donations:</h3>
+        <h3>The challenge of online donations:</h3>
         <div class="span14">
           <h4>We have collected a list of questions to tickle your creativity</h4>
           <ul>
