--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
       <div class="row" id="schedule" >
-        <h2>schedule:</h2>
+        <h2>Schedule:</h2>
         <div class="span1">&nbsp;</div>
         <div class="span4">
           <h3>Friday 19th July</h3>
