added lab logo and contact

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hackday</title>
+    <title>Hack the world @ Betterplace</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Better Hack Day</a>
+          <a class="brand" href="#">Hack The World @Betterplace</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#description">Home</a></li>
@@ -35,6 +35,7 @@
               <!--<li><a href="#mentors">Mentors</a></li>-->
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#rules">Rules</a></li>
+              <li><a href="#contact">Contact Us</a></li>
             </ul>
             <p class="navbar-text pull-right">
               <a href="#tickets">Get Your Ticket</a>
@@ -122,7 +123,7 @@
         <div class="span4">
           <h3>Friday 19th July</h3>
           <div class="time">
-            7pm - 12pm
+            6pm - 12pm
           </div>
           <ul class="details">
             <li>18.00 Registration</li>
@@ -192,9 +193,10 @@
 
       <div class="row" id="sponsors">
         <h3>Sponsors:</h3>
+        <div class="span4"><img src="images/betterplace.jpg" height="80" /></div>
         <div class="span1"></div>
-        <div class="span4"><img src="images/betterplace.jpg" width="300" /></div>
-        <div class="span4"><img src="images/berlin_pil.png" width="300" /></div>
+        <div class="span4"><img src="images/berlin_pil.png" height="80" /></div>
+        <div class="span4"><img src="images/labs.png" height="80" /></div>
         <!-- <div class="span4"><img src="http://placekitten.com/300/80" /></div> -->
       </div>
 
@@ -235,6 +237,15 @@
             learn something new and build something from scratch. Don't stress yourself out too much if you don't
             accomplish what you set out to do. Make sure to have a good time and put your best food forward.
           </p>
+        </div>
+      </div>
+
+      <hr />
+      <div class="row" id="contact">
+        <h3>Questions? Comments?  Contact Us:</h3>
+        <div class="span1">&nbsp;</div>
+        <div class="span12 content">
+          <a class="btn btn-really-large btn-danger" href="mailto:hackathon@betterplace.org">hackathon@betterplace.org</a>
         </div>
       </div>
 
